Code refactoring, removed field injection, added all args